--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "js-cookie": "^2.2.1",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
+    "typescript": "^4.3.2"
   }
 }
